--- a/Drapes/css/style.css
+++ b/Drapes/css/style.css
@@ -179,6 +179,7 @@ body {
 
 .form-container input[type="text"],
 .form-container input[type="email"],
+.form-container input[type="tel"],
 .form-container input[type="date"],
 .form-container input[type="time"],
 .form-container input[type="number"],
