--- a/Drapes/css/style.css
+++ b/Drapes/css/style.css
@@ -223,6 +223,14 @@ body {
     cursor: not-allowed;
 }
 
+.character-counter {
+    font-size: 14px;
+    color: #555;
+    margin-top: 0px;
+    display: block;
+    padding-bottom: 20px;
+}
+
 .confirmation-message {
     text-align: center;
     margin: 30px;
