--- a/Drapes/css/style.css
+++ b/Drapes/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #333;
 }
 
 .header {
@@ -56,7 +57,7 @@ body {
     align-items: center;
     flex-direction: column;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #333;
 }
 
 .portrait {
@@ -70,12 +71,12 @@ body {
     text-align: center;
     font-size: 16px;
     line-height: 1.5;
-    color: #333;
+    color: white;
     max-width: 600px;
 }
 
 .aboutMe {
-    background-color: #FFF;
+    background-color: #333;
     width: 100%;
     margin: 5% 0%;
     display: flex;
@@ -111,7 +112,8 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0% 5%;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: #333;
+    color: white;
     margin: 5% 0%;
 }
 
@@ -128,7 +130,8 @@ body {
 
 .pricing-section {
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #333;
+    color: white;
     text-align: center;
 }
 
@@ -149,7 +152,7 @@ body {
 .price-item p {
     margin: 5px 0;
     font-size: 18px;
-    color: #555;
+    color: white;
 }
 
 
@@ -157,7 +160,8 @@ body {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #333;
+    color: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
